# adif-mcp

./: .gitignore  .pre-commit-config.yaml  404.html  ADIF_MCP_MANIFEST.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Makefile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  TODO.md  What-we-need-to-meet goals.md  build.gradle.kts  gradle.properties  index.html  mkdocs.yaml  mkdocs.yml  move_manifest.sh  move_resources.sh  objects.inv  pyproject.toml  requirements-docs.txt  requirements.docs  server.json  settings.gradle.kts  sitemap.xml  temp.md
.gitgub/workflows/: docs.yaml  pages.yaml  ssl-expiry.yaml
.github/scripts/: README.md  validate_manifest.py
.github/workflows/: ci.yml  docs.yml  manifest-validate.yaml  manifest-validate.yml  pre-commit.yml  release.yml  sanity.yml
SSOT/config/: creds.enc.json
adif_mcp/cli/: build.gradle.kts
adif_mcp/core/: build.gradle.kts
adif_mcp/server/: build.gradle.kts
adif_mcp/spi/: build.gradle.kts
adif_mcp/sync/: build.gradle.kts
app/: build.gradle.kts
cli/: build.gradle.kts
concepts/adif-basics/: index.html
concepts/choice-of-llms/: index.html
concepts/why-matters/: index.html
config/checkstyle/: checkstyle.xml  suppressions.xml
core/: build.gradle.kts
dev/code-snippets/: index.html
dev/command-reference/: index.html
dev/dev-env-setup/: index.html
dev/dev-plan/: index.html
dev/git-commits/: index.html
dev/probes/: index.html
dev/provider-schemas/: index.html
docker/: docker-compose.yml
docs/: CNAME  awards.md  changelog.md  getting-started.md  image-rendering.txt  index.html  index.md  program-id-policy.md  roadmap.md
docs/.well-known/: security.txt
docs/api/: index.html
docs/concepts/: adif-basics.md  overview.md  why-matters.md
docs/dev/: code-snippets.md  command-reference.md  dev-env-setup.md  dev-plan.md  make-commands.md  probes.md  provider-schemas.md  release-process.md  testing.md  troubleshooting.md
docs/devguide/: dev-plan.md  make-commands.md  overview.md
docs/integrations/: eqsl.md  lotw.md  overview.md
docs/mcp/: overview.md  tools.md  validation.md
docs/spec/: spec.md
docs/userguide/: awards.md  getting-started.md  persona-management.md
eqsl/: index.html
integrations/eqsl/: index.html
integrations/lotw/: index.html
integrations/overview/: index.html
lotw/: index.html
mcp/: manifest.json
program-id-policy/: index.html
roadmap/: index.html
scripts/: generate_country_enum.py  persona_ui.py  provider_index_probe.py  reset-personas.sh  validate_manifest.py
search/: search_index.json
server/: build.gradle.kts
test/: TEST-CASE-REGISTER.md  conftest.py  test_cli_test.py  test_enumerations.py  test_eqsl_stub.py  test_ki7mt_forensic.py  test_manifest_shape.py  test_models_validation.py  test_persona_cli.py  test_placeholder.py  test_resources.py  test_security.py  test_server.py
ui/: build.gradle.kts
(+106 files in other folders)
