[project]
name = "adif-mcp"
version = "0.1.0"
description = "ADIF MCP core engine with plugin support (LoTW, eQSL)"
authors = [{ name = "KI7MT" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
]

[project.scripts]
adif-mcp = "adif_mcp.cli:cli"

[tool.uv]
dev-dependencies = [
    "pytest",
    "mypy",
    "ruff",
    "commitizen",
    "pydantic<2",
]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"
