[project]
name = "adif-mcp"
version = "0.1.1"
description = "ADIF MCP core engine with plugin support (LoTW, eQSL)"
authors = [{ name = "KI7MT" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click",
    "pytest>=8.4.1",
    "requests>=2.32.5",
    "typing-extensions>=4.15.0",
]

[project.scripts]
adif-mcp = "adif_mcp.cli:cli"

[tool.uv]
dev-dependencies = [
    "pytest",
    "mypy",
    "ruff",
    "commitizen",
    "pydantic<2",
    "jsonschema>=4.25.1",
    "interrogate>=1.7.0",
    "types-click>=7.1.8",
]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
strict = true
disable_error_code = ["annotation-unchecked", "call-arg"]  # keep yours
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
no_implicit_optional = true
ignore_missing_imports = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
tag_format = "v$version"

[[tool.mypy.overrides]]
module = "adif_mcp.cli"
disable_error_code = ["misc"]
ignore_missing_imports = true

[tool.interrogate]
fail-under = 80
verbose = 1
quiet = false
color = true
# Count only public API; skip dunders/private
ignore-init-method = true
ignore-magic = true
ignore-module = false
ignore-private = true
ignore-nested-functions = true
# Optional: don’t require docstrings for properties
ignore-properties = true
# Only measure your package (adjust if needed)
paths = ["src/adif_mcp"]
